fix dead link, add Concepts button, change colors in dark mode

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -89,8 +89,10 @@
 
 .dark {
   --vp-c-bg: #051d0a;
-  --vp-c-bg-soft: #1c3416;
-  --vp-c-brand-soft: #3c3c36;
+  --vp-c-bg-soft: #415b3c;
+  --vp-c-brand-soft: #415b3c;
+  --vp-c-brand-1: #c5d23c;
+  --vp-c-brand-2: #f9ffbc;
 }
 
 /**
